--- a/index.html
+++ b/index.html
@@ -4,29 +4,56 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="query.css">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   <title>Frontend Mentor | [Blogr]</title>
 </head>
 <body>
+
   <header>
     <div class="left-nav">
       <img src="images/logo.svg" alt="logo" class="logo">
       <nav>
-        <ul>
-          <li>Product</li>
-          <li>Company</li>
-          <li>Connect</li>
-        </ul>
+        <div class="dropdown-container product-menu">
+          <button class="dropbtn product-btn">Product <img src="images/icon-arrow-light.svg" alt=""></button>
+          <div class="dropdown-menu dropdown-product">
+            <a href="">Overview</a>
+            <a href="">Pricing</a>
+            <a href="">Marketplace</a>
+            <a href="">Features</a>
+            <a href="">Integrations</a>
+          </div>
+        </div>
+        <div class="dropdown-container company-menu">
+          <button class="dropbtn company-btn">Company <img src="images/icon-arrow-light.svg" alt=""></button>
+          <div class="dropdown-menu dropdown-company">
+            <a href="">About</a>
+            <a href="">Team</a>
+            <a href="">Blog</a>
+            <a href="">Careers</a>
+          </div>
+        </div>
+        <div class="dropdown-container connect-menu">
+          <button class="dropbtn connect-btn">Connect <img src="images/icon-arrow-light.svg" alt=""></button>
+          <div class="dropdown-menu dropdown-connect">
+            <a href="">Contact</a>
+            <a href="">Newsletter</a>
+            <a href="">LinkedIn</a>
+          </div>
+        </div>    
       </nav>
     </div>
     <div class="btn-login-signup">
       <a href="#" class="cta login">Login</a>
       <a href="#" class="cta signup">Sign Up</a>
     </div>
+    <img id="hamburger" src="images/icon-hamburger.svg" alt="">
   </header>
-  
+
   <div class="intro">
     <img src="images/bg-pattern-intro.svg" alt="">
     <h1>A modern publishing platform</h1>
@@ -36,106 +63,108 @@
       <a href="#" class="cta learn-more">Learn More</a>
     </div>
   </div>
-
-  <div class="design-future">
-    <h1 class="title">Designed for the future</h1>
-    <div class="text">
-      <div class="text1">
-        <h1>Introducing an extensible editor</h1>
-        <p>Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
-          The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
-          videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
-          change the looks of a blog.</p>
+  <div class="animate__animated animate__fadeInUp animate__faster menu">
+    <div class="close-btn">
+      <img src="images/icon-close.svg" alt="">
+    </div>
+    <div class="main-menu">
+      <div class="product">
+        <p>Product <img src="images/icon-arrow-dark.svg" alt=""></p>
       </div>
-      <div class="text2">
-        <h1>Robust content management</h1>
-        <p>
-          Flexible content management enables users to easily move through posts. Increase the usability of your blog 
-          by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
-        </p>
+      <div class="company">
+        <p>Company <img src="images/icon-arrow-dark.svg" alt=""></p>
       </div>
-    </div>
-    <div class="gambar-design" >
-      <img src="images/illustration-editor-desktop.svg" alt="">
-    </div>
-  </div>
-
-  <div class="smartphone">
-    <div class="smartphone-bg">
-      <img src="images/bg-pattern-circles.svg" alt="">
-    </div>
-    <div class="smartphone-content">
-      <img class="illo" src="images/illustration-phones.svg" alt="">
-      <div class="descriptions">
-        <h1>State of the Art Infrastructure</h1>
-        <p>
-          With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
-          This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
-        </p>
+      <div class="connect">
+        <p>Connect <img src="images/icon-arrow-dark.svg" alt=""></p>
       </div>
-    </div>
-  </div>
-
-  <div class="laptop">
-    <div class="img-laptop">
-      <img src="images/illustration-laptop-desktop.svg" alt="">
     </div>
     
-    <div class="laptop-descriptions">
-      <div class="desc1">
-        <h1>Free, open, simple</h1>
-        <p>
-          Blogr is a free and open source application backed by a large community of helpful developers. It supports 
-          features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
-          and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
-        </p>
-      </div>
-      <div class="desc2">
-        <h1>Powerful tooling</h1>
-        <p>
-          Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
-          capable of producing even the most complicated sites.
-        </p>
-      </div>
+    <div class="menu-cta">
+      <a class="burger-login" href="#">Login</a>
+      <a class="burger-signup" href="#">Sign Up</a>
     </div>
   </div>
+  <!-- Product
 
-  <footer>
-    <img src="images/logo.svg" alt="">
-    <div class="product">
-      <p>Product</p>
-      <ul>
-        <li>Overview</li>
-        <li>Pricing</li>
-        <li>Marketplace</li>
-        <li>Features</li>
-        <li>Integrations</li>
-      </ul>
-    </div>
-    <div class="company">
-      <p>Company</p>
-      <ul>
-        <li>About</li>
-        <li>Team</li>
-        <li>Blog</li>
-        <li>Careers</li>
-      </ul>
-    </div>
-    <div class="product">
-      <p>Connect</p>
-      <ul>
-        <li>Contact</li>
-        <li>Newsletter</li>
-        <li>LinkedIn</li>
-      </ul>
-    </div>
-    <div class="attribution">
-      <div class="logo-attr">
-        <p><img src="images/favicon-32x32.png" alt="" width="50">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</p>
-        <p><img src="images/rlogo.svg" alt="" width="50">Coded by <a href="#">Rizky Firman Syah</a>.</p>
-      </div>
-    </div>
-  </footer>
- 
+  Overview
+  Pricing
+  Marketplace
+  Features
+  Integrations
+
+  Company
+
+  About
+  Team
+  Blog
+  Careers
+
+  Connect
+
+  Contact
+  Newsletter
+  LinkedIn
+  
+  Login
+  Sign Up
+
+  A modern publishing platform
+  Grow your audience and build your online brand
+
+  Start for Free
+  Learn More
+
+  Designed for the future
+
+  Introducing an extensible editor
+  Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
+  The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
+  videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
+  change the looks of a blog.
+
+  Robust content management
+  Flexible content management enables users to easily move through posts. Increase the usability of your blog 
+  by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
+
+  State of the Art Infrastructure
+  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+  This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
+
+  Free, open, simple
+  Blogr is a free and open source application backed by a large community of helpful developers. It supports 
+  features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
+  and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
+
+  Powerful tooling
+  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
+  capable of producing even the most complicated sites.
+
+  Product
+
+  Overview
+  Pricing
+  Marketplace
+  Features
+  Integrations
+
+  Company
+
+  About
+  Team
+  Blog
+  Careers
+
+  Connect
+  
+  Contact
+  Newsletter
+  LinkedIn
+
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Your Name Here</a>.
+  </div> -->
+
+  <script src="script.js"></script>
 </body>
 </html>
