--- a/index.html
+++ b/index.html
@@ -65,17 +65,35 @@
   </div>
   <div class="animate__animated animate__fadeInUp animate__faster menu">
     <div class="close-btn">
-      <img src="images/icon-close.svg" alt="">
+      <img src="images/icon-close.svg" alt="close">
     </div>
     <div class="main-menu">
-      <div class="product">
-        <p>Product <img src="images/icon-arrow-dark.svg" alt=""></p>
+      <div class="accordion-btn product">
+        <button class="accor-product-btn">Product <img src="images/icon-arrow-dark.svg" alt=""></button>
+        <div class="panel product-panel">
+          <a href="">Overview</a>
+          <a href="">Pricing</a>
+          <a href="">Marketplace</a>
+          <a href="">Features</a>
+          <a href="">Integrations</a>
+        </div>
       </div>
-      <div class="company">
-        <p>Company <img src="images/icon-arrow-dark.svg" alt=""></p>
+      <div class="accordion-btn company">
+        <button class="accor-company-btn">Company <img src="images/icon-arrow-dark.svg" alt=""></button>
+        <div class="panel company-panel">
+          <a href="">About</a>
+          <a href="">Team</a>
+          <a href="">Blog</a>
+          <a href="">Careers</a>
+        </div>
       </div>
-      <div class="connect">
-        <p>Connect <img src="images/icon-arrow-dark.svg" alt=""></p>
+      <div class="accordion-btn connect">
+        <button class="accor-connect-btn">Connect <img src="images/icon-arrow-dark.svg" alt=""></button>
+        <div class="panel connect-panel">
+          <a href="">Contact</a>
+          <a href="">Newsletter</a>
+          <a href="">LinkedIn</a>
+        </div>
       </div>
     </div>
     
