--- a/index.html
+++ b/index.html
@@ -102,6 +102,105 @@
       <a class="burger-signup" href="#">Sign Up</a>
     </div>
   </div>
+
+  <div class="design">
+    <div class="design-title">
+      <h1>Designed for the future</h1>
+    </div>
+    <div class="design-image">
+      <!-- <img src="images/illustration-editor-desktop.svg" alt="" width="300"> -->
+    </div>
+    <div class="design-text">
+      <div class="text1">
+        <h1>Introducing an extensible editor</h1>
+        <p>
+          Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
+          The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
+          videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
+          change the looks of a blog.
+        </p>
+      </div>
+      <div class="text2">
+        <h1>Robust content management</h1>
+        <p>
+          Flexible content management enables users to easily move through posts. Increase the usability of your blog 
+          by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="smartphone">
+    <div class="smartphone-bg">
+      <img src="images/bg-pattern-circles.svg" alt="">
+    </div>
+    <div class="smartphone-content">
+      <img class="illo" src="images/illustration-phones.svg" alt="">
+      <div class="descriptions">
+        <h1>State of the Art Infrastructure</h1>
+        <p>
+          With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+          This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="laptop">
+    <div class="laptop-illo">
+    </div>
+    <div class="laptop-text">
+      <div class="text1">
+        <h1>Free, open, simple</h1>
+        <p>
+          Blogr is a free and open source application backed by a large community of helpful developers. It supports 
+  features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
+  and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
+        </p>
+      </div>
+      <div class="text2">
+        <h1>Powerful tooling</h1>
+        <p>
+          Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
+          capable of producing even the most complicated sites.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <img src="images/logo.svg" alt="">
+    <div class="footer-menu">
+      <div class="product-footer">
+        <h1>Product</h1>
+        <ul>
+          <li>Overview</li>
+          <li>Pricing</li>
+          <li>Marketplace</li>
+          <li>Features</li>
+          <li>Integrations</li>
+        </ul>
+      </div>
+      <div class="company-footer">
+        <h1>Company</h1>
+        <ul>
+          <li>About</li>
+          <li>Team</li>
+          <li>Blog</li>
+          <li>Careers</li>
+        </ul>
+      </div>
+      <div class="connect-footer">
+        <h1>Connect</h1>
+        <ul>
+          <li>Contact</li>
+          <li>Newsletter</li>
+          <li>LinkedIn</li>
+        </ul>
+      </div>
+
+    </div>
+  </footer>
   <!-- Product
 
   Overview
