--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
     <div class="main-menu">
       <div class="accordion-btn product">
-        <button class="accor-product-btn">Product <img src="images/icon-arrow-dark.svg" alt=""></button>
+        <button class="accor-product-btn">Product <img class="product-arrow" src="images/icon-arrow-dark.svg" alt=""></button>
         <div class="panel product-panel">
           <a href="">Overview</a>
           <a href="">Pricing</a>
@@ -79,7 +79,7 @@
         </div>
       </div>
       <div class="accordion-btn company">
-        <button class="accor-company-btn">Company <img src="images/icon-arrow-dark.svg" alt=""></button>
+        <button class="accor-company-btn">Company <img class="company-arrow" src="images/icon-arrow-dark.svg" alt=""></button>
         <div class="panel company-panel">
           <a href="">About</a>
           <a href="">Team</a>
@@ -88,7 +88,7 @@
         </div>
       </div>
       <div class="accordion-btn connect">
-        <button class="accor-connect-btn">Connect <img src="images/icon-arrow-dark.svg" alt=""></button>
+        <button class="accor-connect-btn">Connect <img class="connect-arrow" src="images/icon-arrow-dark.svg" alt=""></button>
         <div class="panel connect-panel">
           <a href="">Contact</a>
           <a href="">Newsletter</a>
