--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/r-icons.svg">
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="query.css">
   <link
@@ -198,7 +198,16 @@
           <li>LinkedIn</li>
         </ul>
       </div>
-
+    </div>
+    <div class="attribution">
+      <div class="who frontend">
+        <img src="images/favicon-32x32.png" alt="">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+      </div>
+      <div class="who coder">
+        <img src="images/r-icons.svg" alt="" width="32">
+        Coded by <a href="#" target="_blank">Rizky Firman Syah</a>
+      </div>
     </div>
   </footer>
   <!-- Product
