--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  <script src="https://unpkg.com/scrollreveal">
+  
+  </script>
   <title>Frontend Mentor | [Blogr]</title>
 </head>
 <body>
@@ -56,7 +59,7 @@
 
   <div class="intro">
     <img src="images/bg-pattern-intro.svg" alt="">
-    <h1>A modern publishing platform</h1>
+    <h1 class="heading-intro">A modern publishing platform</h1>
     <p>Grow your audience and build your online brand</p>
     <div class="intro-btn">
       <a href="#" class="cta start-free">Start for Free</a>
@@ -210,6 +213,8 @@
       </div>
     </div>
   </footer>
+
+  
   <!-- Product
 
   Overview
@@ -292,5 +297,6 @@
   </div> -->
 
   <script src="script.js"></script>
+
 </body>
 </html>
