--- a/index.html
+++ b/index.html
@@ -110,27 +110,30 @@
     <div class="design-title">
       <h1>Designed for the future</h1>
     </div>
-    <div class="design-image">
-      <!-- <img src="images/illustration-editor-desktop.svg" alt="" width="300"> -->
-    </div>
-    <div class="design-text">
-      <div class="text1">
-        <h1>Introducing an extensible editor</h1>
-        <p>
-          Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
-          The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
-          videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
-          change the looks of a blog.
-        </p>
+    <div class="design-descript">
+      <div class="design-image">
+        <!-- <img src="images/illustration-editor-desktop.svg" alt="" width="300"> -->
       </div>
-      <div class="text2">
-        <h1>Robust content management</h1>
-        <p>
-          Flexible content management enables users to easily move through posts. Increase the usability of your blog 
-          by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
-        </p>
+      <div class="design-text">
+        <div class="text1">
+          <h1>Introducing an extensible editor</h1>
+          <p>
+            Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
+            The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
+            videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
+            change the looks of a blog.
+          </p>
+        </div>
+        <div class="text2">
+          <h1>Robust content management</h1>
+          <p>
+            Flexible content management enables users to easily move through posts. Increase the usability of your blog 
+            by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
+          </p>
+        </div>
       </div>
     </div>
+
   </div>
 
   <div class="smartphone">
@@ -205,11 +208,11 @@
     <div class="attribution">
       <div class="who frontend">
         <img src="images/favicon-32x32.png" alt="">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>
       </div>
       <div class="who coder">
         <img src="images/r-icons.svg" alt="" width="32">
-        Coded by <a href="#" target="_blank">Rizky Firman Syah</a>
+        Coded by <a href="#" target="_blank"> Rizky Firman Syah</a>
       </div>
     </div>
   </footer>
