--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
         <div class="dropdown-container product-menu">
           <button class="dropbtn product-btn">Product <img src="images/icon-arrow-light.svg" alt=""></button>
           <div class="dropdown-menu dropdown-product">
-            <a href="">Overview</a>
-            <a href="">Pricing</a>
-            <a href="">Marketplace</a>
-            <a href="">Features</a>
-            <a href="">Integrations</a>
+            <a href="under-construction.html">Overview</a>
+            <a href="under-construction.html">Pricing</a>
+            <a href="under-construction.html">Marketplace</a>
+            <a href="under-construction.html">Features</a>
+            <a href="under-construction.html">Integrations</a>
           </div>
         </div>
         <div class="dropdown-container company-menu">
           <button class="dropbtn company-btn">Company <img src="images/icon-arrow-light.svg" alt=""></button>
           <div class="dropdown-menu dropdown-company">
-            <a href="">About</a>
-            <a href="">Team</a>
-            <a href="">Blog</a>
-            <a href="">Careers</a>
+            <a href="under-construction.html">About</a>
+            <a href="under-construction.html">Team</a>
+            <a href="under-construction.html">Blog</a>
+            <a href="under-construction.html">Careers</a>
           </div>
         </div>
         <div class="dropdown-container connect-menu">
           <button class="dropbtn connect-btn">Connect <img src="images/icon-arrow-light.svg" alt=""></button>
           <div class="dropdown-menu dropdown-connect">
-            <a href="">Contact</a>
-            <a href="">Newsletter</a>
-            <a href="">LinkedIn</a>
+            <a href="under-construction.html">Contact</a>
+            <a href="under-construction.html">Newsletter</a>
+            <a href="under-construction.html">LinkedIn</a>
           </div>
         </div>    
       </nav>
@@ -62,8 +62,8 @@
     <h1 class="heading-intro">A modern publishing platform</h1>
     <p>Grow your audience and build your online brand</p>
     <div class="intro-btn">
-      <a href="#" class="cta start-free">Start for Free</a>
-      <a href="#" class="cta learn-more">Learn More</a>
+      <a href="under-construction.html" class="cta start-free">Start for Free</a>
+      <a href="under-construction.html" class="cta learn-more">Learn More</a>
     </div>
   </div>
   <div class="animate__animated animate__fadeInUp animate__faster menu">
@@ -74,35 +74,35 @@
       <div class="accordion-btn product">
         <button class="accor-product-btn">Product <img class="product-arrow" src="images/icon-arrow-dark.svg" alt=""></button>
         <div class="panel product-panel">
-          <a href="">Overview</a>
-          <a href="">Pricing</a>
-          <a href="">Marketplace</a>
-          <a href="">Features</a>
-          <a href="">Integrations</a>
+          <a href="under-construction.html">Overview</a>
+          <a href="under-construction.html">Pricing</a>
+          <a href="under-construction.html">Marketplace</a>
+          <a href="under-construction.html">Features</a>
+          <a href="under-construction.html">Integrations</a>
         </div>
       </div>
       <div class="accordion-btn company">
         <button class="accor-company-btn">Company <img class="company-arrow" src="images/icon-arrow-dark.svg" alt=""></button>
         <div class="panel company-panel">
-          <a href="">About</a>
-          <a href="">Team</a>
-          <a href="">Blog</a>
-          <a href="">Careers</a>
+          <a href="under-construction.html">About</a>
+          <a href="under-construction.html">Team</a>
+          <a href="under-construction.html">Blog</a>
+          <a href="under-construction.html">Careers</a>
         </div>
       </div>
       <div class="accordion-btn connect">
         <button class="accor-connect-btn">Connect <img class="connect-arrow" src="images/icon-arrow-dark.svg" alt=""></button>
         <div class="panel connect-panel">
-          <a href="">Contact</a>
-          <a href="">Newsletter</a>
-          <a href="">LinkedIn</a>
+          <a href="under-construction.html">Contact</a>
+          <a href="under-construction.html">Newsletter</a>
+          <a href="under-construction.html">LinkedIn</a>
         </div>
       </div>
     </div>
     
     <div class="menu-cta">
-      <a class="burger-login" href="#">Login</a>
-      <a class="burger-signup" href="#">Sign Up</a>
+      <a class="burger-login" href="under-construction.html">Login</a>
+      <a class="burger-signup" href="under-construction.html">Sign Up</a>
     </div>
   </div>
 
@@ -212,7 +212,7 @@
       </div>
       <div class="who coder">
         <img src="images/r-icons.svg" alt="" width="32">
-        Coded by <a href="#" target="_blank"> Rizky Firman Syah</a>
+        Coded by <a href="https://www.instagram.com/rizfirsy/" target="_blank"> Rizky Firman Syah</a>
       </div>
     </div>
   </footer>
