--- a/under-construction.html
+++ b/under-construction.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div class="illo">
+        <img src="images/2271.jpg" alt="" data-src="images/images/2271.jpg">
         <a href='https://www.freepik.com/vectors/city'>City vector created by tartila - www.freepik.com</a>
     </div>
     <p><b>Hi there,</b> glad to see you here. FYI this page is not ready yet to deployed. 
